# app/Http/Controllers/CompanyController.php
@@ -48,12 +48,12 @@ class CompanyController extends Controller
         if (!is_null($user)) {
             $data = Subscriptions::query()->where('company_id', $user['id'])->where('valid_until', '>', Carbon::now())->first();
             if (!is_null($data)) {
-                $company->select('phone_number', 'company_name', 'inn', 'ogrn', 'legal_address', 'postal_address', 'logo_url')->first();
+                $company->select('id', 'phone_number', 'company_name', 'inn', 'ogrn', 'legal_address', 'postal_address', 'logo_url')->with('manager')->first();
             } else {
-                $company->select('company_name', 'inn', 'ogrn', 'legal_address', 'postal_address', 'logo_url')->first();
+                $company->select('id', 'company_name', 'inn',  'legal_address', 'postal_address', 'logo_url')->first();
             }
         }else{
-            $company->select('company_name', 'inn', 'ogrn', 'legal_address', 'postal_address', 'logo_url')->first();
+            $company->select('id', 'company_name', 'inn', 'legal_address', 'postal_address', 'logo_url')->first();
         }
         $company = $company->first();
         return response()->json(['success' => true, 'company' => $company]);
@@ -164,19 +164,11 @@ class CompanyController extends Controller
         $validator = Validator::make($request->all(), [
             'upload_loc_id' => 'required',
             'onload_loc_id' => 'required',
-            'order_title' => 'required',
             'kuzov_type' => 'required',
-            'loading_type' => 'required',
-            'max_weight' => 'required',
             'max_volume' => 'required',
-            'payment_type' => 'required',
-            'payment_nds' => 'required',
-            'prepaid' => 'required',
-            'ruble_per_kg' => 'required',
+            'description' => 'required',
             'company_name' => 'required',
             'manager_id' => 'required',
-            'material_type' => 'required',
-            'material_info' => 'required',
         ]);
         if ($validator->fails()) {
             return response()->json([
@@ -196,19 +188,10 @@ class CompanyController extends Controller
             $validator = Validator::make($request->all(), [
                 'upload_loc_id' => 'required',
                 'onload_loc_id' => 'required',
-                'order_title' => 'required',
                 'kuzov_type' => 'required',
-                'loading_type' => 'required',
-                'max_weight' => 'required',
                 'max_volume' => 'required',
-                'payment_type' => 'required',
-                'payment_nds' => 'required',
-                'prepaid' => 'required',
-                'ruble_per_kg' => 'required',
                 'company_name' => 'required',
                 'manager_id' => 'required',
-                'material_type' => 'required',
-                'material_info' => 'required',
             ]);
             if ($validator->fails()) {
                 return response()->json([
@@ -229,9 +212,9 @@ class CompanyController extends Controller
 
     public function getMyOrders(){
         $userID = Auth::id();
-        $sql = "SELECT g.id, g.company_id, g.upload_loc_id, g.upload_loc_info, g.onload_loc_id,g.onload_loc_info, g.order_title, g.kuzov_type,
-                        g.loading_type, g.start_date, g.end_date, g.max_weight, g.max_volume, g.payment_type, g.payment_nds, g.prepaid, g.ruble_per_kg,
-                        g.company_name, g.is_disabled, g.created_at,g.description,g.material_type,g.material_info,
+        $sql = "SELECT g.id, g.company_id, g.upload_loc_id, g.onload_loc_id, g.onload_loc_address, g.order_title, g.kuzov_type,
+                        g.loading_type, g.start_date, g.end_date, g.max_volume, g.payment_type, g.payment_nds, g.prepaid, g.ruble_per_kg,
+                        g.company_name, g.is_disabled, g.created_at,g.description,g.distance ,
                         upload.CityName AS upload_city_name, onload.CityName AS onload_city_name,
                         managers.phone_number AS manager_phone_number, managers.FullName AS manager_name
                  from `goods_orders` as g
@@ -245,11 +228,11 @@ class CompanyController extends Controller
     }
     public function getMyRides(){
         $userID = Auth::id();
-        $sql = "SELECT g.id, g.company_id, g.upload_loc_id, g.onload_loc_id, g.order_title, g.kuzov_type,
-                        g.loading_type, g.max_weight, g.max_volume, g.payment_type, g.payment_nds, g.prepaid, g.ruble_per_kg,
-                        g.company_name, g.is_disabled, g.created_at,g.description,g.manager_id,g.material_type,g.material_info,
+        $sql = "SELECT g.id, g.company_id, g.upload_loc_id, g.onload_loc_id, g.kuzov_type,
+                       g.max_volume, g.company_name, g.is_disabled, g.created_at,g.description,g.manager_id,
                         managers.phone_number AS manager_phone_number, managers.FullName AS manager_name,
-                        upload.CityName AS upload_city_name, onload.CityName AS onload_city_name from `ride_orders` as g
+                        upload.CityName AS upload_city_name, onload.CityName AS onload_city_name
+                     from `ride_orders` as g
                      JOIN russia_regions upload ON g.upload_loc_id = upload.CityId
                      JOIN russia_regions onload ON g.onload_loc_id = onload.CityId
                      JOIN managers managers ON g.manager_id = managers.id WHERE g.company_id = '${userID}'";
@@ -338,49 +321,51 @@ class CompanyController extends Controller
                 $where[] = "g.onload_loc_id IN (".implode(",", $onload_city_ids).")";
             }
         }
-        if(isset($data['loading_type'])){
-            $where[] = "g.loading_type = '${data['loading_type']}'";
-        }
-        if(isset($data['min_deposit'])){
-            $where[] = "g.ruble_per_kg > '${data['min_deposit']}'";
-        }
+
+//        if(isset($data['loading_type'])){
+//            $where[] = "g.loading_type = '${data['loading_type']}'";
+//        }
+//        if(isset($data['min_deposit'])){
+//            $where[] = "g.ruble_per_kg > '${data['min_deposit']}'";
+//        }
+
 //        if(isset($data['date_from']) && isset($data['date_to'])){
 //            $where[] = "g.start_date >= '${data['date_from']}'";
 //            $where[] = "g.end_date <= '${data['date_to']}'";
 //        }else if(isset($data['date_from'])){
 //            $where[] = "g.start_date >= '${data['date_from']}'";
 //        }
-        if(isset($data['material_type'])){
-            $where[] = "g.material_type LIKE '%${data['material_type']}%'";
+
+        if(isset($data['kuzov_type'])){
+            $where[] = "g.kuzov_type LIKE '%${data['kuzov_type']}%'";
         }
-        if(isset($data['material_info'])){
-            $where[] = "g.material_info LIKE '%${data['material_info']}%'";
-        }
-        if(isset($data['company_id'])){
-            $where[] = "g.company_id = ${data['company_id']}";
-        }
+//        if(isset($data['material_info'])){
+//            $where[] = "g.material_info LIKE '%${data['material_info']}%'";
+//        }
+//        if(isset($data['company_id'])){
+//            $where[] = "g.company_id = ${data['company_id']}";
+//        }
         if(!empty($where)){
             $where_text = implode(' AND ', $where);
         }
         if(strlen($where_text) != 0){
 //            $sql = "SELECT * from `goods_orders` where ${where_text}";
 //            $sql = "SELECT * from `goods_orders` where ${where_text}";
-            $sql = "SELECT g.id, g.company_id, g.upload_loc_id, g.onload_loc_id, g.order_title, g.kuzov_type, g.loading_type,
-                            g.max_weight, g.max_volume, g.payment_type, g.payment_nds, g.ruble_per_kg, IF(${data['is_subscribed']} = 1, managers.phone_number, NULL) AS manager_phone_number,
+            $sql = "SELECT g.id, g.company_id, g.upload_loc_id, g.onload_loc_id,g.kuzov_type,
+                              g.max_volume, IF(${data['is_subscribed']} = 1, managers.phone_number, NULL) AS manager_phone_number,
                             IF(${data['is_subscribed']} = 1, managers.FullName, NULL) AS manager_name,
-                            g.company_name, g.is_disabled, g.created_at, IF(${data['is_subscribed']} = 1, g.description, NULL) AS order_description, g.prepaid, g.manager_id,
-                            g.material_type, g.material_info,
+                            g.company_name, g.is_disabled, g.created_at, IF(${data['is_subscribed']} = 1, g.description, NULL) AS order_description, g.manager_id,
                             upload.CityName AS upload_city_name, onload.CityName AS onload_city_name from `ride_orders` as g
                      JOIN russia_regions upload ON g.upload_loc_id = upload.CityId
                      JOIN russia_regions onload ON g.onload_loc_id = onload.CityId
                     JOIN managers managers ON g.manager_id = managers.id
                     where ${where_text} ;" ;
         }else{
-            $sql =  "SELECT g.id, g.company_id, g.upload_loc_id, g.onload_loc_id, g.order_title, g.kuzov_type, g.loading_type,
-                            g.max_weight, g.max_volume, g.payment_type, g.payment_nds, g.ruble_per_kg, IF(${data['is_subscribed']} = 1, managers.phone_number, NULL) AS manager_phone_number,
+            $sql =  "SELECT g.id, g.company_id, g.upload_loc_id, g.onload_loc_id,  g.kuzov_type,
+                            g.max_volume, IF(${data['is_subscribed']} = 1, managers.phone_number, NULL) AS manager_phone_number,
                             IF(${data['is_subscribed']} = 1, managers.FullName, NULL) AS manager_name,
-                            g.company_name, g.is_disabled, g.created_at, IF(${data['is_subscribed']} = 1, g.description, NULL) AS order_description, g.prepaid, g.manager_id,
-                            g.material_type, g.material_info, upload.CityName AS upload_city_name, onload.CityName AS onload_city_name from `ride_orders` as g
+                            g.company_name, g.is_disabled, g.created_at, IF(${data['is_subscribed']} = 1, g.description, NULL) AS order_description, g.manager_id,
+                            upload.CityName AS upload_city_name, onload.CityName AS onload_city_name from `ride_orders` as g
                      JOIN russia_regions upload ON g.upload_loc_id = upload.CityId
                      JOIN russia_regions onload ON g.onload_loc_id = onload.CityId
                      JOIN managers managers ON g.manager_id = managers.id;";
@@ -475,11 +460,9 @@ class CompanyController extends Controller
                 $where[] = "g.onload_loc_id IN (".implode(",", $onload_city_ids).")";
             }
         }
-        if(isset($data['loading_type'])){
-            $where[] = "g.loading_type = '${data['loading_type']}'";
-        }
-        if(isset($data['min_deposit'])){
-            $where[] = "g.ruble_per_kg > '${data['min_deposit']}'";
+
+        if(isset($data['kuzov_type'])){
+            $where[] = "g.kuzov_type LIKE '%${data['kuzov_type']}%'";
         }
         if(isset($data['date_from']) && isset($data['date_to'])){
             $where[] = "g.start_date >= '${data['date_from']}'";
@@ -487,14 +470,11 @@ class CompanyController extends Controller
         }else if(isset($data['date_from'])){
             $where[] = "g.start_date >= '${data['date_from']}'";
         }
-        if(isset($data['material_type'])){
-            $where[] = "g.material_type LIKE '%${data['material_type']}%'";
+        if(isset($data['order_title'])){
+            $where[] = "g.order_title LIKE '%${data['order_title']}%'";
         }
-        if(isset($data['material_info'])){
-            $where[] = "g.material_info LIKE '%${data['material_info']}%'";
-        }
-        if(isset($data['company_id'])){
-            $where[] = "g.company_id = ${data['company_id']}";
+        if(isset($data['ruble_per_kg'])){
+            $where[] = "g.ruble_per_kg = '${data['ruble_per_kg']}";
         }
         if(!empty($where)){
             $where_text = implode(' AND ', $where);
@@ -502,11 +482,10 @@ class CompanyController extends Controller
         if(strlen($where_text) != 0){
 //            $sql = "SELECT * from `goods_orders` where ${where_text}";
 //            $sql = "SELECT * from `goods_orders` where ${where_text}";
-            $sql = "SELECT g.id, g.company_id, g.upload_loc_id, g.upload_loc_info, g.onload_loc_id, g.onload_loc_info, g.kuzov_type, g.loading_type, g.start_date, g.end_date, g.max_weight,
+            $sql = "SELECT g.id, g.company_id, g.upload_loc_id, g.onload_loc_id, g.onload_loc_address, g.kuzov_type, g.loading_type, g.start_date, g.end_date,
                             g.max_volume, g.payment_type, g.payment_nds, g.ruble_per_kg,IF(${data['is_subscribed']} = 1, managers.phone_number, NULL) AS manager_phone_number,
                             IF(${data['is_subscribed']} = 1, managers.FullName, NULL) AS manager_name,
                             g.company_name, g.is_disabled, g.created_at, IF(${data['is_subscribed']} = 1, g.description, NULL) AS order_description, g.prepaid, g.manager_id,
-                            g.material_type, g.material_info,
                             upload.CityName AS upload_city_name, onload.CityName AS onload_city_name from `goods_orders` as g
                      JOIN russia_regions upload ON g.upload_loc_id = upload.CityId
                      JOIN russia_regions onload ON g.onload_loc_id = onload.CityId
@@ -514,11 +493,10 @@ class CompanyController extends Controller
                     where ${where_text}
 ";
         }else{
-            $sql =  "SELECT g.id, g.company_id, g.upload_loc_id, g.upload_loc_info, g.onload_loc_id, g.onload_loc_info, g.kuzov_type, g.loading_type, g.start_date, g.end_date, g.max_weight,
+            $sql =  "SELECT g.id, g.company_id, g.upload_loc_id, g.onload_loc_id, g.onload_loc_address, g.kuzov_type, g.loading_type, g.start_date, g.end_date,
                             g.max_volume, g.payment_type, g.payment_nds, g.ruble_per_kg,IF(${data['is_subscribed']} = 1, managers.phone_number, NULL) AS manager_phone_number,
                             IF(${data['is_subscribed']} = 1, managers.FullName, NULL) AS manager_name,
                             g.company_name, g.is_disabled, g.created_at, IF(${data['is_subscribed']} = 1, g.description, NULL) AS order_description, g.prepaid, g.manager_id,
-                            g.material_type, g.material_info,
                             upload.CityName AS upload_city_name, onload.CityName AS onload_city_name from `goods_orders` as g
                      JOIN russia_regions upload ON g.upload_loc_id = upload.CityId
                      JOIN russia_regions onload ON g.onload_loc_id = onload.CityId
